--- a/my-second-website.html
+++ b/my-second-website.html
@@ -14,5 +14,15 @@
         <li>Getting brushed</li>
         <li>Sleeping</li>
       </ul>
+
+      <h2>Chris's animals</h2>
+      <p>Chris only has one animal, a dog Munchie</p>
+
+      <h3>Here are some things that Munchie likes:</h3>
+      <ul>
+        <li>Going on walks</li>
+        <li>Barking at the mailman</li>
+        <li>Sleeping on the couch</li>
+      <ul>
   </body>
 </html>
