fixed spacing and indenting issues

--- a/my-second-website.html
+++ b/my-second-website.html
@@ -4,25 +4,25 @@
     <title>Animals</title>
   </head>
   <body>
-    <h1>Animals that we have in our houses respecitvely </h1>
-      <h2>Brian's animals</h2>
-      <p>I only have one animal, a cat.  Her name is Meowtzu.</p>
+    <h1>Animals that we have in our houses respectively </h1>
+    <h2>Brian's animals</h2>
+    <p>I only have one animal, a cat.  Her name is Meowtzu.</p>
 
-      <h3>Here are the things she likes: </h3>
-      <ul>
-        <li>Food</li>
-        <li>Getting brushed</li>
-        <li>Sleeping</li>
-      </ul>
+    <h3>Here are the things she likes: </h3>
+    <ul>
+      <li>Food</li>
+      <li>Getting brushed</li>
+      <li>Sleeping</li>
+    </ul>
 
-      <h2>Chris's animals</h2>
-      <p>Chris only has one animal, a dog Munchie</p>
+    <h2>Chris's animals</h2>
+    <p>Chris only has one animal, a dog Munchie</p>
 
-      <h3>Here are some things that Munchie likes:</h3>
-      <ul>
-        <li>Going on walks</li>
-        <li>Barking at the mailman</li>
-        <li>Sleeping on the couch</li>
-      <ul>
+    <h3>Here are some things that Munchie likes:</h3>
+    <ul>
+      <li>Going on walks</li>
+      <li>Barking at the mailman</li>
+      <li>Sleeping on the couch</li>
+    <ul>
   </body>
 </html>
