added pictures and links to the page

--- a/my-second-website.html
+++ b/my-second-website.html
@@ -7,22 +7,34 @@
     <h1>Animals that we have in our houses respectively </h1>
     <h2>Brian's animals</h2>
     <p>I only have one animal, a cat.  Her name is Meowtzu.</p>
+    <img src="img/cat.jpg" alt="a picture of a cat">
 
     <h3>Here are the things she likes: </h3>
     <ul>
-      <li>Food</li>
+      <li><em>Food</em></li>
       <li>Getting brushed</li>
-      <li>Sleeping</li>
+      <li><strong>Sleeping</strong></li>
     </ul>
 
     <h2>Chris's animals</h2>
     <p>Chris only has one animal, a dog Munchie</p>
+    <img src="img/images.jpeg" alt="a picture of a dog">
 
     <h3>Here are some things that Munchie likes:</h3>
     <ul>
-      <li>Going on walks</li>
-      <li>Barking at the mailman</li>
+      <li><strong>Going on walks</strong></li>
+      <li><em>Barking at the mailman</em></li>
       <li>Sleeping on the couch</li>
     <ul>
+
+    <h2>Animal Websites</h2>
+    <ul>
+      <li>
+        <a href="http://www.aspca.org">ASPCA</a>
+      </li>
+      <li>
+        <a href="http://www.multcopets.org">Multnomah County Animal Services</a>
+      </li>
+    </ul>
   </body>
 </html>
