add a second webpage about hobbies

--- a/my-second-website.html
+++ b/my-second-website.html
@@ -25,7 +25,7 @@
       <li><strong>Going on walks</strong></li>
       <li><em>Barking at the mailman</em></li>
       <li>Sleeping on the couch</li>
-    <ul>
+    </ul>
 
     <h2>Animal Websites</h2>
     <ul>
@@ -36,5 +36,7 @@
         <a href="http://www.multcopets.org">Multnomah County Animal Services</a>
       </li>
     </ul>
+    <h2>Other webpages</h2>
+    <a href="my-bicycle.html">Chris and Brian's Hobbies</a>
   </body>
 </html>
