--- a/my-bicycle.html
+++ b/my-bicycle.html
@@ -5,22 +5,42 @@
   </head>
 
   <h1>Chris's Bike</h1>
-    <p>Chris's is bike is a Giant roadbike</p>
-    <img src="img/chrisbike.jpg" alt="giant ocr bike">
-    <a href="https://www.giant-bicycles.com/en-US/">Giant Bicycle Website</a>
+  <p>Chris's bike is a <a href="https://www.giant-bicycles.com/en-US/">Giant roadbike</a></p>
+  <img src="img/chrisbike.jpg" alt="giant ocr bike">
+  <ul>
+    <li>Aluminum fram</li>
+    <li>Converted to 1X9</li>
+    <li>Straight handlebars</li>
+  </ul>
+  <p>Chris's old mountain bike</p>
+  <img src="img/santa-cruz.jpeg" alt="mountain bike">
+  <ul>
+    <li>Hardtail mountain bike</li>
+    <li>Manitou front fork</li>
+    <li>Sram components</li>
+  </ul>
+
 
   <h1>Brian's Bikes</h1>
+  <img src="img/giant.jpg">
+  <p><strong>Giant Kronos</strong></p>
   <ul>
-    <li>
-      <img src="img/giant.jpg">
-      <strong>Giant Kronos</strong>
-    </li>
-    <li>
-      <img src="img/comp.jpg">
-      <strong>Specialized Awol Comp</strong>
-    </li>
-    <li>
-      <img src="img/crockett.jpg">
-      <strong>Trek Crockett 5</strong>
-    </li>
+    <li>Steel frame: <strong>"If you can't rust it, don't trust it"</strong></li>
+    <li>Race Geometry</li>
+    <li><em>Complete with the best components 1989 has to offer!</em></li>
+  </ul>
+  <img src="img/comp.jpg">
+  <p><strong>Specialized Awol Comp</strong></p>
+  <ul>
+    <li>Steel frame</li>
+    <li>Touring geometry</li>
+    <li>Great for gravel and mud</li>
+  </ul>
+
+  <img src="img/crockett.jpg">
+  <p><strong>Trek Crockett 5</strong></p>
+  <ul>
+    <li>Aluminum frame</li>
+    <li>Cyclocross geomerty</li>
+    <li><strong>Pretty Pink color</strong></li>
   </ul>
