add additional formatting and content to both webpages

--- a/my-bicycle.html
+++ b/my-bicycle.html
@@ -3,44 +3,49 @@
   <head>
     <title>Chris and Brian's Hobbies</title>
   </head>
+  <h1>Chris and Brian's Bicycles</h1>
+  <body>
+    <h2>Chris's Bike</h2>
+    <p>Chris's bike is a <a href="https://www.giant-bicycles.com/en-US/">Giant roadbike</a></p>
+    <img src="img/chrisbike.jpg" alt="giant ocr bike">
+    <ul>
+      <li><em>Aluminum frame</em></li>
+      <li>Converted to 1X9</li>
+      <li>Straight handlebars</li>
+    </ul>
 
-  <h1>Chris's Bike</h1>
-  <p>Chris's bike is a <a href="https://www.giant-bicycles.com/en-US/">Giant roadbike</a></p>
-  <img src="img/chrisbike.jpg" alt="giant ocr bike">
-  <ul>
-    <li>Aluminum fram</li>
-    <li>Converted to 1X9</li>
-    <li>Straight handlebars</li>
-  </ul>
-  <p>Chris's old mountain bike</p>
-  <img src="img/santa-cruz.jpeg" alt="mountain bike">
-  <ul>
-    <li>Hardtail mountain bike</li>
-    <li>Manitou front fork</li>
-    <li>Sram components</li>
-  </ul>
+    <p>Chris's old mountain bike</p>
+    <img src="img/santa-cruz.jpeg" alt="santa cruz mountain bike">
+    <ul>
+      <li>Hardtail mountain bike</li>
+      <li>Manitou front fork</li>
+      <li>Sram components</li>
+    </ul>
 
+    <h2>Brian's Bikes</h2>
+    <img src="img/giant.jpg" alt= "Giant Kronos Bicycle">
+    <p><strong>Giant Kronos</strong></p>
+    <ul>
+      <li>Steel frame: <strong>"If you can't rust it, don't trust it"</strong></li>
+      <li>Race Geometry</li>
+      <li><em>Complete with the best components 1989 has to offer!</em></li>
+    </ul>
 
-  <h1>Brian's Bikes</h1>
-  <img src="img/giant.jpg">
-  <p><strong>Giant Kronos</strong></p>
-  <ul>
-    <li>Steel frame: <strong>"If you can't rust it, don't trust it"</strong></li>
-    <li>Race Geometry</li>
-    <li><em>Complete with the best components 1989 has to offer!</em></li>
-  </ul>
-  <img src="img/comp.jpg">
-  <p><strong>Specialized Awol Comp</strong></p>
-  <ul>
-    <li>Steel frame</li>
-    <li>Touring geometry</li>
-    <li>Great for gravel and mud</li>
-  </ul>
+    <img src="img/comp.jpg" alt="Specialized Awol Bicycle">
+    <p><strong>Specialized Awol Comp</strong></p>
+    <ul>
+      <li>Steel frame</li>
+      <li>Touring geometry</li>
+      <li>Great for gravel and mud</li>
+    </ul>
 
-  <img src="img/crockett.jpg">
-  <p><strong>Trek Crockett 5</strong></p>
-  <ul>
-    <li>Aluminum frame</li>
-    <li>Cyclocross geomerty</li>
-    <li><strong>Pretty Pink color</strong></li>
-  </ul>
+    <img src="img/crockett.jpg" alt="Trek Crockett bicycle">
+    <p><strong>Trek Crockett 5</strong></p>
+    <ul>
+      <li>Aluminum frame</li>
+      <li>Cyclocross geomerty</li>
+      <li><strong>Pretty Pink color</strong></li>
+    </ul>
+    <a href="my-second-website.html">Animal webpage</a>
+  </body>
+</html>
