--- a/my-second-website.html
+++ b/my-second-website.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Animals that we have in our houses respectively </h1>
     <h2>Brian's animals</h2>
-    <p>I only have one animal, a cat.  Her name is Meowtzu.</p>
+    <p>I only have one animal, a cat.  Her name is Meowtzu.  We found her on craigslist, and she found our hearts.</p>
     <img src="img/cat.jpg" alt="a picture of a cat">
 
     <h3>Here are the things she likes: </h3>
@@ -15,6 +15,7 @@
       <li>Getting brushed</li>
       <li><strong>Sleeping</strong></li>
     </ul>
+    <p>We've tried to find ways to incorporate all of her favorite things into one activity, but it usually ends in her running away.</p>
 
     <h2>Chris's animals</h2>
     <p>Chris only has one animal, a dog Munchie</p>
